--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,9 +1,8 @@
 <footer class="pie-pagina">
   <div class="grupo1">
-    <div class="box" id="logo">
-      
+    <div class="box" id="logo">      
         <a href="#">
-          <img src="../img/logoWhite-removebg.png" alt="logo de skydive house">
+          <img src="../../img/logoWhite-removebg.png" alt="logo de skydive house">
         </a>
       
     </div>
@@ -12,7 +11,9 @@
       <p class="home" id="desc"> Somos reconocidos como los protagonistas de los mayores eventos de paracaidismo celebrados en Latinoamerica y nos sentimos orgullosos de saber que la mayoría de los instructores y representantes del paracaidismo nos reconocen como el lugar donde descubrieron y aprendieron a amar nuestro deporte.  </p>
     </div>
     <div class="box" id="social">
-      <h2>SIGUENOS</h2>
+      <div>
+      <h2>SIGUENOS</h2><br>
+    </div>
       <div class="red-social">
         <a href="#" class="fa fa-facebook"></a>
         <a href="#" class="fa fa-instagram"></a>
