--- a/views/products/productCreate.ejs
+++ b/views/products/productCreate.ejs
@@ -40,7 +40,7 @@
           <input type="submit" class="form-button" value="Crear">
         </div>
 
-        <a type="button" class="" href="/product/edit">
+        <a type="button" class="" href="/products">
           <input type="button" class="form-button2" value="Editar un producto existente"> </a>
 
       </form>
