--- a/views/products/productDetail.ejs
+++ b/views/products/productDetail.ejs
@@ -14,14 +14,13 @@
       <div class="allProducts">
         <% for (let index=0; index <products.length;index++) {%>
           <article>
-            <a href="/products/<%= products[index].id %>"><img src="/img/uploads/<%= products[index].image %>" alt="<% products.image %>"></a>
+            <a href="/products/<%= products[index].id %>"><img src="/img/uploads/<%= products[index].image %>" alt="<% products.image %>">
             <div class="productDetail">
-              <h4>
-                <%=products[index].product_name %>
-              </h4>
-              <div class="price">
-              <i class="fa-solid fa-dollar-sign"></i> <%= products[index].price%>
-            </div>
+             
+              <h4> <%=products[index].product_name %>              
+               <i class="fa-solid fa-dollar-sign"></i> <%= products[index].price%>
+            </h4>
+         
               <%= products[index].description%>            
             </div>
             <!-- ELIMINAR -->
@@ -29,7 +28,7 @@
               action="/products/<%= products[index].id %>?_method=DELETE" 
               method="post">
               <button class="delete" type="submit" >Eliminar</button>            
-            </form>
+            </form></a>
           </article>
                   <% } %>
             
