--- a/public/css/register.css
+++ b/public/css/register.css
@@ -16,9 +16,10 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
-  min-height: 110vh;
+  /* min-height: 110vh; */
   margin: 0;
-  overflow: hidden;
+  position: relative;
+  /* overflow: hidden; */
 }
 
 .form {
@@ -32,5 +33,6 @@ body {
   }
   .main {
     max-width: 800px;
+ 
   }
 }
