--- a/public/css/register.css
+++ b/public/css/register.css
@@ -16,13 +16,10 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
-  /* min-height: 110vh; */
+  min-height: 110vh;
   margin: 0;
-<<<<<<< HEAD
   position: relative;
   /* overflow: hidden; */
-=======
->>>>>>> 26fb1e9b4afd350d926b4e8c252171c9214d0eaa
 }
 
 .form {
