--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -9,8 +9,8 @@
     <ul>
       <li><a class="active" href="/">NOSOTROS</a></li>
       <li><a class="active" href="/products">RESERVA TU SALTO</a></li>
-      <li><a class="active" href="/register">REGISTRATE</a></li>
-      <li><a href="/login"> <i class="fa-solid fa-user-astronaut" id="user"></a></i></li>
+      <li><a class="active" href="/users/register">REGISTRATE</a></li>
+      <li><a href="/users/login"> <i class="fa-solid fa-user-astronaut" id="user"></a></i></li>
       <li><a href="../products/cart"><i class="fa-solid fa-cart-shopping" id="cart"></a></i></li>
       <img class="paracaidas-color" src="../../img/paracaidas-menu-removebg.png" alt="paracaidas">
     </ul>
