--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -3,8 +3,8 @@
 
 <head>
   <%- include("../partials/head")%> 
-  <link rel="stylesheet" href="css/register.css">
-  <link rel="stylesheet" href="css/login.css" />
+  <link rel="stylesheet" href="/css/register.css">
+  <link rel="stylesheet" href="/css/login.css" />
 
 </head>
 
@@ -12,7 +12,7 @@
   <%- include("../partials/header")%> 
 
   <main class="main">
-    <form class="form" id="login">
+    <form class="form" id="login" method="POST" action="users/login" >
       <div class="form-profile">
         <i class="fa-solid fa-user form-field__icon profile"></i>
       </div>
