--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -55,7 +55,7 @@ nav.nav-home ul {
 
 nav.nav-home ul li {
   display: inline-block;
-  margin: 15px 5px 2px;
+  margin: 10px 5px 5px;
 }
 
 nav.nav-home ul li a #user,
@@ -240,6 +240,15 @@ div#social.box div {
 
 .pie-pagina .grupo2 small{
   font-size: 9px;
+}
+
+
+img.imgProfNav {
+  border-radius: 50%;
+  width: 40px;
+  padding: 2px;
+  margin-top: 4px;
+
 }
 
 @media screen and (max-width: 800px){
