--- a/views/products/productEdit.ejs
+++ b/views/products/productEdit.ejs
@@ -34,7 +34,7 @@
         </div>
 
         <div class="form-field">
-          <img src="/img/uploads/<%=product.image %>" alt="<% product.image %>">
+          <img src="/img/uploads/products/<%=product.image %>" alt="<% product.image %>">
         </div>
 
         <div class="form-field">
@@ -42,7 +42,7 @@
         </div>
         <div class="form-field">
           <input class="form-field__input" type="file" value="Agregar imagen" id="image" single name="image"
-            value="img/uploads/<%=product.image?? ''%>" />
+            value="img/uploads/products/<%=product.image?? ''%>" />
         </div>
 
         <div class="form-field">
