--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -12,24 +12,35 @@
   <%- include("../partials/header")%> 
 
   <main class="main">
-    <form class="form" id="login" method="POST" action="users/login" >
+    <form class="form" id="login" method="POST" action="/users/login" >
       <div class="form-profile">
         <i class="fa-solid fa-user form-field__icon profile"></i>
       </div>
       <h2 class="form-title">Login</h2>
       <div class="form-field">
-        <label class="form-field__label" for="Username"><i class="fa-solid fa-user form-field__icon"></i></label>
-        <input class="form-field__input" type="text" placeholder="Username" id="Username" />
+        <div class="form-field">
+          <label class="form-field__label <%= locals.errors && errors.email ? "form-field__invalid" : null %>" 
+            for="email"><i class="fa-regular fa-envelope form-field__icon"></i></label>
+          <input class="form-field__input" type="text" placeholder="E-mail" id="email" name="email"
+          value = "<%= locals.oldData ? oldData.email : null  %>">          
+        </div>
+        <% if (locals.errors && errors.email) {%>
+          <div class="errorMsg">
+            <%= errors.email.msg %>
+          </div>
+          <% } %>
+        
+
       </div>
       <div class="form-field">
         <label class="form-field__label" for="confirm_password"><i
             class="fa-solid fa-lock form-field__icon"></i></label>
-        <input class="form-field__input" type="password" placeholder="Confirm Password" id="confirm_password" />
+        <input class="form-field__input" type="password" placeholder="Confirm Password" id="confirm_password" name="pass" />
       </div>
       <p class="text-password">
         <i class="fa-regular fa-envelope form-field__icon icono_sobre"></i>Forget password?
       </p>
-      <input type="button" class="form-button" value="Login">
+      <input type="submit" class="form-button" value="Login">
     </form>
 
       </main>
