--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -38,7 +38,7 @@
         <input class="form-field__input" type="password" placeholder="Confirm Password" id="confirm_password" name="pass" />
       </div>
       <p class="text-password">
-        <i class="fa-regular fa-envelope form-field__icon icono_sobre"></i>Forget password?
+        <!-- <i class="fa-regular fa-envelope form-field__icon icono_sobre"></i>Forget password? -->
       </p>
       <input type="submit" class="form-button" value="Login">
     </form>
