--- a/views/user/profile.ejs
+++ b/views/user/profile.ejs
@@ -3,8 +3,13 @@
 
 <head>
     <%- include("../partials/head")%>
-        <link rel="stylesheet" href="../css/stylesCart.css">
-        <link rel="stylesheet" href="../css/productDetail2.css">
+    <link rel="stylesheet" href="../css/stylesCart.css">
+    <link rel="stylesheet" href="../css/productDetail2.css">  
+    <link rel="stylesheet" href="../css/profile.css">
+
+
+
+        
 </head>
 
 <body>
