Se agregaron las validaciones de creacion de producto

--- a/public/css/register.css
+++ b/public/css/register.css
@@ -26,6 +26,14 @@ body {
   top: 30px;
 }
 
+
+div.errorMsg{
+  display: flex;
+  justify-content: center;
+  color: var(--secondary-color);
+  font-weight: 500;
+}
+
 @media (min-width: 1200px) {
   body {
     /* background-size: contain; */
