--- a/public/css/productAdd.css
+++ b/public/css/productAdd.css
@@ -100,8 +100,7 @@ body{
   margin-top: 25px;
 }
 .form-field {
-  margin-bottom: 30px;
-
+  margin-top: 25px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -153,6 +152,7 @@ body{
   color: #fff;
   transition: all 300ms;
   cursor: pointer;
+  margin-top: 10px;
 }
 
 .form-field__label:hover,
