--- a/views/products/productCreate.ejs
+++ b/views/products/productCreate.ejs
@@ -17,24 +17,49 @@
         <h2 class="form-title">Nuevo producto</h2>
         <div class="form-field">
           <input class="form-field__input"type="text" placeholder="Nombre del producto" 
-          id="Nombre del producto" name="product_name"/>
+          id="Nombre del producto" name="product_name" value = "<%= locals.oldData ? oldData.product_name : null  %>" />
         </div>
+        <% if (locals.errors && errors.product_name) {%>
+          <div class="errorMsg">
+            <%= errors.product_name.msg %>
+          </div>
+          <% } %>
 
         <div class="form-field">
           <input class="form-field__input" type="text" placeholder="Agregar descripcion" 
-          id="Agregar descripcion" name="description" />
+          id="Agregar descripcion" name="description" value = "<%= locals.oldData ? oldData.description : null  %>"/>
         </div>
+
+        <% if (locals.errors && errors.description) {%>
+          <div class="errorMsg">
+            <%= errors.description.msg %>
+          </div>
+          <% } %>
+
         <div class="form-field">
 
           <input class="form-field__input" type="text" placeholder="Agregar precio" 
-          id="Agregar precio" name="price"/>
+          id="Agregar precio" name="price" value = "<%= locals.oldData ? oldData.price : null  %>"/>
         </div>
+
+        <% if (locals.errors && errors.price) {%>
+          <div class="errorMsg">
+            <%= errors.price.msg %>
+          </div>
+          <% } %>
+
 
         <div class="form-field">
           <label for="image">Subir imagen</label>
           <input class="form-field__input" type="file" 
-          id="image" single name="image" accept=".jpg">
+          id="image" single name="image">
         </div>
+
+        <% if (locals.errors && errors.image) {%>
+          <div class=" errorMsg">
+            <%= errors.image.msg %>
+          </div>
+          <% } %> 
 
         <div class="form-field">
           <input type="submit" class="form-button" value="Crear">
