--- a/views/products/productEdit.ejs
+++ b/views/products/productEdit.ejs
@@ -12,7 +12,7 @@
   <%- include("../partials/header")%>
 
     <main class="main">
-      <form class="form" action="/products/edit/<%= product.id%>?_method=PUT" method="post"
+      <form class="form" action="/products/edit/<%=product.id%>?_method=PUT" method="post"
         enctype="multipart/form-data">
 
         <h2 class="form-title">Modificar producto</h2>
@@ -22,16 +22,34 @@
             name="product_name" value="<%=product.product_name?? ''%>" />
         </div>
 
+        <% if (locals.errors && errors.product_name) {%>
+          <div class="errorMsg">
+            <%= errors.product_name.msg %>
+          </div>
+          <% } %>
+
         <div class="form-field">
 
           <input class="form-field__input" type="text" placeholder="Editar descripcion" id="Editar descripcion"
             name="description" value="<%=product.description?? ''%>" />
         </div>
+
+        <% if (locals.errors && errors.description) {%>
+          <div class="errorMsg">
+            <%= errors.description.msg %>
+          </div>
+          <% } %>
         <div class="form-field">
 
           <input class="form-field__input" type="text" placeholder="Editar precio" id="Editar precio" name="price"
             value="<%=product.price?? ''%>" />
         </div>
+
+        <% if (locals.errors && errors.price) {%>
+          <div class="errorMsg">
+            <%= errors.price.msg %>
+          </div>
+          <% } %>
 
         <div class="form-field">
           <img src="/img/uploads/products/<%=product.image %>" alt="<% product.image %>">
