--- a/views/products/productDetail.ejs
+++ b/views/products/productDetail.ejs
@@ -10,6 +10,7 @@
 <body>
   <%- include("../partials/header")%>
     <main>
+      <h5 style="margin: 10px; padding: 20px;"><a href="/">Home</a>/ Reserva tu salto</h5>
       <h4 class="elegir">ELEGI TU PROXIMA AVENTURA..</h4>
 
       <!--Creación de producto, solo podra ser visto por un usuario administrador.-->
