Se finalizan las validaciones a nivel del backend, se inicia con las validaciones del frontend del formulario de registro de usuarios.

--- a/views/products/productEdit.ejs
+++ b/views/products/productEdit.ejs
@@ -20,6 +20,8 @@
 
           <input class="form-field__input" type="text" placeholder="Nombre del producto" id="Nombre del producto"
             name="product_name" value="<%=product.product_name?? ''%>" />
+
+          <input id="prodOldImage" name="prodOldImage" type="hidden" value="<%=product.image?? ''%>" />
         </div>
 
         <% if (locals.errors && errors.product_name) {%>
