--- a/views/user/register.ejs
+++ b/views/user/register.ejs
@@ -11,7 +11,7 @@
 <body>
   <%- include("../partials/header")%>
     <main class="main">
-      <form class="form" method="POST" action="/users/register" enctype="multipart/form-data">
+      <form id="form" class="form" method="POST" action="/users/register" enctype="multipart/form-data">
         <h2 class="form-title">Sign up</h2>
 
         <div class="form-field">
@@ -70,6 +70,8 @@
       </form>
 
     </main>
+
+    <script src="/js/registerValidationForm.js"></script>
 
 
 </body>
