--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -45,7 +45,7 @@
 
       </main>
       <%- include("../partials/footer")%> 
-  
+    <script src="/js/loginValidationForm.js"></script>
 </body>
 
 </html>l
