--- a/views/products/productCreate.ejs
+++ b/views/products/productCreate.ejs
@@ -12,7 +12,7 @@
   <%- include("../partials/header")%>
 
     <main class="main">
-      <form class="form" action="/products/create" method="post" enctype="multipart/form-data">
+      <form class="form" id="productForm" action="/products/create" method="post" enctype="multipart/form-data">
 
         <h2 class="form-title">Nuevo producto</h2>
         <div class="form-field">
@@ -73,7 +73,7 @@
 
     </main>
     <%- include("../partials/footer")%>
-
+  <script src="/js/createProductValidationForm.js"></script>  
 </body>
 
 </html>
