se termino de hacer la validaciones en Front con Js

--- a/views/products/productEdit.ejs
+++ b/views/products/productEdit.ejs
@@ -70,7 +70,7 @@
         </div>
 
         <a type="button" class="" href="/products/create">
-          <input type="button" class="form-button2" value="Agregar un nuevo producto"> </a>
+          <input type="button" class="form-button2" id="updateProductButton" value="Agregar un nuevo producto"> </a>
 
       </form>
 
