Se ajustan los estilos en general de la pagina

--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -32,3 +32,8 @@ div.profile img {
 .form-button:hover {
     background-color: #962420;
 }
+
+body{
+    display: flex;
+	flex-direction: column;
+}
