--- a/public/css/register.css
+++ b/public/css/register.css
@@ -19,6 +19,8 @@ body {
   min-height: 110vh;
   margin: 0;
   position: relative;
+  display: flex;
+	flex-direction: column;
   /* overflow: hidden; */
 }
 
