--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,7 @@
   <head>
     <%- include("./partials/head")%>
   </head>
-  <body class="home">
+  <body class="home" style="display: flex; flex-direction: column">
     <%- include("./partials/header")%>
 
     <main id="home">
