--- a/public/css/stylesCart.css
+++ b/public/css/stylesCart.css
@@ -4,6 +4,8 @@ body.productCart {
   padding: 0;
   margin: 0;
   font-size: 0.95em;
+  display: flex;
+	flex-direction: column;
 }
 
 /* nav.nav-home {
