--- a/views/user/profile.ejs
+++ b/views/user/profile.ejs
@@ -19,7 +19,7 @@
             <img src="/img/uploads/avatars/<%=user.avatar%>" alt="<%user.avatar%>">
             <div>
                 <h4>
-                    Hi <%=user.fullName %>
+                    Welcome Back! <%=user.fullName %>
                 </h4>
                 <div>
                     <%= user.email%>
