--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -17,8 +17,8 @@
         <i class="fa-solid fa-user form-field__icon profile"></i>
       </div>
       <h2 class="form-title">Login</h2>
-      <div class="form-field">
-        <div class="form-field">
+      <div class="form-field2">
+        <div class="form-field2">
           <label class="form-field__label <%= locals.errors && errors.email ? "form-field__invalid" : null %>" 
             for="email"><i class="fa-regular fa-envelope form-field__icon"></i></label>
           <input class="form-field__input" type="text" placeholder="E-mail" id="email" name="email"
@@ -32,7 +32,7 @@
       <% }else{ %>
         <div id="errorEmail"></div>
       <%}%>
-      <div class="form-field">
+      <div class="form-field2">
         <label class="form-field__label" for="confirm_password"><i
             class="fa-solid fa-lock form-field__icon"></i></label>
         <input class="form-field__input" type="password" placeholder="Confirm Password" id="confirm_password" name="pass" />
